functional tabs + made responsive

--- a/contribution_log.html
+++ b/contribution_log.html
@@ -50,13 +50,13 @@
                         <div class="tableidname">
                             <span>NAME</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>DATE</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableemail">
                             <span>E-MAIL</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>AMOUNT</span>
                         </div>
 
@@ -68,13 +68,13 @@
                         <div class="tableidname">
                             <span>Umair Thakur</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>9-7-19</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableemail">
                             <span>umair@volvmedia.com</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>$16,420</span>
                         </div>
 
@@ -84,13 +84,13 @@
                         <div class="tableidname">
                             <span>Shekar Mudaliyar</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>9-7-19</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableemail">
                             <span>shekar@gmail.com</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>$16,420</span>
                         </div>
                     </div>
@@ -99,13 +99,13 @@
                         <div class="tableidname">
                             <span>Mayur P</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>9-7-19</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableemail">
                             <span>mayur@volvmedia.com</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>$16,420</span>
                         </div>
                     </div>
