--- a/home_page.html
+++ b/home_page.html
@@ -41,7 +41,7 @@
                 <img class="header_title" src="Assets/home_header.svg" height="31px" />
             </div>
             <div class="workspacecontent">
-                <span class="bene-light-header">Your Account Status</span>
+                <!-- <span class="bene-light-header">Your Account Status</span>
                 <div class="accountstatus">
                     <div>
                         <img src="Assets/status_pass.svg" height="25px" />
@@ -83,7 +83,7 @@
                     </div>
                 </div>
 
-                <br /><br /><br /><br />
+                <br /><br /><br /><br /> -->
 
                 <span class="bene-light-header">Your Active Campaign</span>
                 <div class="activecampaigns">
@@ -102,7 +102,7 @@
 
                 <span class="bene-light-header">Active Benefactory Campaigns</span>
                 <div class="activecampaigns">
-                    <div class="gridviewmedium">
+                    <a href="choose_campaign.html" onclick="" class="gridviewmedium">
                         <div class="gridviewimg">
                             <img src="Assets/amazon-brazil-fire.jpg">
                         </div>
@@ -111,9 +111,9 @@
                             <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="gridviewmedium">
+                    <a href="" class="gridviewmedium">
                         <div class="gridviewimg">
                             <img src="Assets/campaign-pic-2.jpeg">
                         </div>
@@ -122,7 +122,7 @@
                             <div class="bene-body-base-small">In the past 48 hours, 2000 new fires have started in the
                                 Amazon despite the President’s ban on deliberate burning.</div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
