--- a/past_campaigns.html
+++ b/past_campaigns.html
@@ -50,13 +50,13 @@
                         <div class="tableidname">
                             <span>CAMPAIGN TITLE</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>DATE</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableidname">
                             <span>NON-PROFIT</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>TOTAL CONTRIBUTED</span>
                         </div>
 
@@ -68,13 +68,13 @@
                         <div class="tableidname">
                             <span>California Wildfires</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>9-7-19</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableidname">
                             <span>World Vision</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>$16,420</span>
                         </div>
 
@@ -84,13 +84,13 @@
                         <div class="tableidname">
                             <span>Kerala Floods</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>9-7-19</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableidname">
                             <span>World Vision</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>$16,420</span>
                         </div>
                     </div>
@@ -99,13 +99,13 @@
                         <div class="tableidname">
                             <span>Clean Drinking Water</span>
                         </div>
-                        <div class="tablepay">
+                        <div class="tabledate">
                             <span>9-7-19</span>
                         </div>
-                        <div class="tableno">
+                        <div class="tableidname">
                             <span>World Vision</span>
                         </div>
-                        <div class="tableemail">
+                        <div class="tablepay">
                             <span>$16,420</span>
                         </div>
                     </div>
