--- a/campaigns_page.html
+++ b/campaigns_page.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="theme-color" content="#BA3027" />
     <link rel="icon" href="Assets/ACT_NOW_Logo_(Med).png" type="image/png" sizes="16x16">
     <link rel="stylesheet" type="text/css" href="retailer_dashboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -105,13 +106,13 @@
         </div>
         <<<<<<< HEAD </body> </html>======= </div> <script>
             function openNav() {
-                document.getElementById("navBar").style.width = "300px";
+            document.getElementById("navBar").style.width = "300px";
             }
 
             // function closeNav() {
             // document.getElementById("mySidenav").style.width = "0";
             // }
-        </script>
+            </script>
 </body>
 
 </html>
