--- a/help_page.html
+++ b/help_page.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="icon" href="Assets/ACT_NOW_Logo_(Med).png" type="image/png" sizes="16x16">
-
+    <meta name="theme-color" content="#BA3027" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
