--- a/integrations_page.html
+++ b/integrations_page.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="theme-color" content="#BA3027" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="icon" href="Assets/ACT_NOW_Logo_(Med).png" type="image/png" sizes="16x16">
     <link rel="stylesheet" type="text/css" href="retailer_dashboard.css">
