--- a/integrations_page.html
+++ b/integrations_page.html
@@ -991,11 +991,8 @@ Invalid Parameters : {
                 tabcontent[i].style.display = "none";
             }
             tablinks = document.getElementsByClassName("tablinks");
-            for (i = 0; i < tablinks.length; i++) {
-                // tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
+            for (i = 0; i < tablinks.length; i++) {}
             document.getElementById(docName).style.display = "grid";
-            // evt.currentTarget.className += " active";
         }
     </script>
 
